# fep_metamodel

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt  changelog.md
doc/input/xsd/common/2.0/: conan_types.xsd  fep_types.xsd  timing_interface_types.xsd
doc/input/xsd/element/1.0/: fep_element_type_1.0.xsd
doc/input/xsd/element/2.0/: fep_element_timing.xsd  fep_element_type.xsd
doc/input/xsd/element/2.0/example/default_example/: example_2.0.fep_element_timing  example_2.0.fep_element_type
doc/input/xsd/element/2.0/example/default_example/ddl/: example.ddl
doc/input/xsd/element/2.0/example/sdk_timing_example/fep_element_driver/: fep_element_driver.fep_element_type
doc/input/xsd/element/2.0/example/sdk_timing_example/fep_element_sensor_back/: fep_element_sensor_back.fep_element_type
doc/input/xsd/element/2.0/example/sdk_timing_example/fep_element_sensor_front/: fep_element_sensor_front.fep_element_type
doc/input/xsd/system/1.0/: fep2_launch_config1.0.xsd  fep_properties_1.0.xsd  fep_system_sdk_1.0.xsd  fep_system_sdk_example_1.0.fep_system_sdk
doc/input/xsd/system/1.1/: fep_system_sdk_example_1.1.fep_system_sdk
doc/input/xsd/system/2.0/: fep_system_properties.xsd  fep_system_sdk.xsd
doc/license/: CONTRIBUTION.md
include/fep_metamodel/: fep_element.h  fep_system.h
src/: CMakeLists.txt
src/fep_metamodel/: CMakeLists.txt  fep_element.cpp  fep_metamodel-config.cmake.in  fep_system.cpp
test/: CMakeLists.txt
test/function/: CMakeLists.txt
test/function/fep_element/files/: example_2.0.fep_element_timing  example_2.0.fep_element_timing_bad_1  example_2.0.fep_element_timing_bad_2  example_2.0.fep_element_timing_bad_3  example_2.0.fep_element_type_2  example_2.0.fep_element_type_bad_1  example_2.0.fep_element_type_bad_2  example_2.0.fep_element_type_bad_3  example_2.0.fep_element_type_bad_4  fep_element_environment.fep_element_type  fep_element_observer.fep_element_type  fep_timing_master.fep_element_type
test/function/fep_element/src/: CMakeLists.txt  tester_fep_element.cpp
test/function/fep_system/files/: example_2.0.fep_system_properties  example_2.0.fep_system_properties_bad_1  example_2.0.fep_system_properties_bad_2  example_2.0.fep_system_properties_bad_3  example_2.0.fep_system_sdk  example_2.0.fep_system_sdk_bad_1  example_2.0.fep_system_sdk_bad_2  example_2.0.fep_system_sdk_bad_3  example_2.0.fep_system_sdk_bad_4  example_2.0.fep_system_sdk_bad_5
test/function/fep_system/src/: CMakeLists.txt  tester_fep_system.cpp
test/private/install_complete/: reference.yaml
test/traceability/: FEP.rqtf
test/traceability/helper/: GenerateReqtifyStarter.bat  conanfile.py
test/traceability/projectConfig/ciscripts/: generateReports.ots
